# Django-lab

./: db.sqlite3  mcp.json  mcp_server.py  pyproject.toml
ConferenceApp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ConferenceApp/migrations/: 0001_initial.py  0002_alter_conference_description_alter_conference_name_and_more.py
GestionConference/: settings.py  urls.py
SessionApp/: admin.py  models.py
SessionApp/migrations/: 0001_initial.py  0002_initial.py  0003_alter_session_room_delete_submission.py
SessionAppApi/: serializers.py  urls.py  views.py
Template/: base.html  login.html  register.html
Template/Conference/: conference_delete.html  conference_form.html  details.html  liste.html
Template/submissions/: form.html  submissionDetail.html  submissionListe.html
UserApp/: admin.py  forms.py  models.py  urls.py  views.py
UserApp/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py
securityConfigApp/: urls.py
